made the margin 0

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 body {
     width: 100%;
+    max-width: 1440px;
     height: 100vh;
     display: flex;
     align-items: center;
@@ -14,9 +15,8 @@ body {
     background-image: url(images/pattern-background-mobile.svg);
     background-repeat: no-repeat;
     background-position: top;
-    background-position: relative;
     background-size: contain;
-    margin: auto;
+    margin: 0 auto;
 }
 
 main {
